--- a/JordanDavisLab11/web/WEB-INF/web.xml
+++ b/JordanDavisLab11/web/WEB-INF/web.xml
@@ -56,4 +56,14 @@
     <welcome-file-list>
         <welcome-file>login</welcome-file>
     </welcome-file-list>
+    <env-entry>
+        <env-entry-name>webmail-username</env-entry-name>
+        <env-entry-type>java.lang.String</env-entry-type>
+        <env-entry-value>jdavis010599@gmail.com</env-entry-value>
+    </env-entry>
+    <env-entry>
+        <env-entry-name>webmail-password</env-entry-name>
+        <env-entry-type>java.lang.String</env-entry-type>
+        <env-entry-value>SecurePassword2</env-entry-value>
+    </env-entry>
 </web-app>
